test/good/strings/for1.px

for c in "axz" do
    print c
    continue
    print c
