test/bad/loops/for07.px

for c in "x"... do
    skip
